--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/GB_1/v16
-/GB_2/Debug
-/GB_3/Debug
-/GB_1/.vs/GB_1/v16
-/GB_1/Debug
-/GB_1/GB_1.vcxproj.user
+[Dd]ebug/
+[Rr]elease/
+[Bb]in/
+[Oo]bj/
+
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
+
+.vs
